test: add unit tests for createAttemptsForRound method in RideRequestDriverAttemptService